# tsp-mt

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  publish.yml
benchmark/: README.md
benchmark/chunk-size-study/: README.md
benchmark/chunk-size-study/results/: chunk-confirm-20260529T023845Z-compare.tsv  chunk-confirm-20260529T023845Z-rows.tsv  chunk-confirm-20260529T023845Z.md  chunk-explorer-20260528T203703Z-agg.tsv  chunk-explorer-20260528T203703Z-rows.tsv  chunk-explorer-20260528T203703Z.md
crates/lin_kernighan/: Cargo.toml
crates/lin_kernighan/src/: alpha.rs  candidate.rs  coord.rs  distance.rs  error.rs  initial.rs  lib.rs  params.rs  problem.rs  recombine.rs  solver.rs  tour.rs
crates/lin_kernighan/src/lk/: four_opt.rs  mod.rs  or_opt.rs  three_opt.rs  two_opt.rs
crates/lkh/: Cargo.toml  README.md  build.rs
crates/lkh/docs/: PAR_SPEC.md  TSPLIB_SPEC.md
crates/lkh/src/: embedded_lkh.rs  error.rs  lib.rs  parameters.rs  problem.rs  process.rs  solver.rs  spec_writer.rs  tour.rs
crates/lkh_derive/: Cargo.toml
crates/lkh_derive/src/: lib.rs  lkh_display.rs  with_methods.rs
crates/tsp_geo/: Cargo.toml  README.md
crates/tsp_geo/src/: error.rs  fmath.rs  geo_types.rs  lib.rs  node.rs  rustgeo.rs  solve.rs  solver.rs  tour.rs
crates/tsp_geo/src/io/: input.rs  mod.rs
crates/tsp_ils/: Cargo.toml  README.md
crates/tsp_ils/examples/: bench.rs
crates/tsp_ils/src/: candidates.rs  construct.rs  kdtree.rs  lib.rs  platform.rs  rng.rs  solve.rs  state.rs
crates/tsp_ils/tests/: quality.rs
crates/tsp_mt_core/: Cargo.toml  build.rs
crates/tsp_mt_core/src/: chunked.rs  constants.rs  error.rs  file_cleanup.rs  input.rs  lib.rs  logging.rs  node.rs  runner.rs  solver.rs  tour.rs  utils.rs
crates/tsp_mt_core/src/algo/: chunked.rs  h3_chunking.rs  mod.rs  runner.rs  solver.rs  stitching.rs
crates/tsp_mt_core/src/algo/runner/: common.rs  metric_spike.rs  mod.rs
crates/tsp_mt_core/src/geo/: geometry.rs  mod.rs  projection.rs
crates/tsp_mt_core/src/io/: input.rs  options.rs
crates/tsp_mt_core/src/lkh/: REAMD.md  config.rs  mod.rs  process.rs  run_spec.rs  solver.rs
crates/tsp_mt_derive/: Cargo.toml
crates/tsp_mt_derive/src/: as_lkh.rs  cli_options.rs  cli_value.rs  kv_display.rs  lib.rs  new.rs  timer.rs  utils.rs
crates/tsp_solver/: Cargo.toml
crates/tsp_solver/examples/: bench.rs
crates/tsp_solver/src/: candidates.rs  construct.rs  lib.rs  solve.rs
crates/tsp_solver/tests/: quality.rs
lkh/: install.sh
refactor-workspace/: assessment.md  goals.md  map.md  trace.md
scripts/: benchmark-max-chunk-size.sh  benchmark.sh  compare-avg.sh  compare-solvers.sh  compare-sweep.sh  confirm-chunk-optimal.sh  release-check-lkh.sh  sweep-chunk-explorer.sh  sweep-resume.sh  sweep-ultimate.sh  update-lkh-sha256.sh  verify-fast.sh  verify-multi-seed.sh
src/: chunked.rs  embedded_lkh.rs  geometry.rs  h3_chunking.rs  input.rs  lib.rs  lkh.rs  lkh_first.rs  logging.rs  main.rs  node.rs  old.rs  options.rs  outliers.rs  problem.rs  process.rs  processing.rs  project.rs  recursive.rs  run_spec.rs  solver.rs  stats.rs  stitching.rs  utils.rs  virus.rs
src/lkh/: chunked.rs  config.rs  constants.rs  geometry.rs  h3_chunking.rs  input.rs  mod.rs  node.rs  options.rs  point.rs  problem.rs  process.rs  projection.rs  run_spec.rs  solver.rs  stitching.rs
src/tsp/: merge.rs  mod.rs  recursion.rs  refine.rs  split.rs  timed.rs
