[workspace]
resolver = "3"
members = [
  "crates/tsp_geo",
  "crates/tsp_mt_derive",
  "crates/tsp_ils",
]

[package]
name        = "tsp-mt"
version     = "0.2.0"
edition     = "2024"
description = "Multi-threaded TSP solver for lat/lng coordinates with a built-in clean-room Lin-Kernighan-style heuristic"
license     = "Apache-2.0"
readme      = "README.md"
keywords    = ["tsp", "routing", "geo", "heuristics"]
categories  = ["algorithms", "command-line-utilities"]

[dependencies]
log           = "0.4.29"
tsp-geo       = { path = "crates/tsp_geo", version = "0.2.0" }
tsp_mt_derive = { path = "crates/tsp_mt_derive", version = "0.1.0" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
