[package]
name          = "lkh"
version       = "0.1.0"
edition       = "2024"
build         = "build.rs"
description   = "LKH process/config integration helpers"
license       = "Apache-2.0"
readme        = "README.md"
repository    = "https://github.com/TurtIeSocks/tsp-mt"
homepage      = "https://github.com/TurtIeSocks/tsp-mt"
documentation = "https://docs.rs/lkh"
keywords      = ["tsp", "routing", "lkh"]
categories    = ["algorithms"]

[features]
default   = []
fetch-lkh = []

[dependencies]
thiserror  = "2.0.18"
lkh_derive = { version = "0.1.0", path = "../lkh_derive" }

[build-dependencies]
sha2 = "0.10"
