[package]
name         = "tsp-ils"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
description  = "Clean-room TSP heuristic: candidate-list 2-opt/Or-opt local search with greedy construction, don't-look bits, and (optionally multi-core) segment-based iterated local search"
license      = "Apache-2.0"
readme       = "README.md"
repository   = "https://github.com/TurtIeSocks/tsp-mt"
keywords     = ["tsp", "routing", "heuristics", "optimization", "no-std"]
categories   = ["algorithms", "no-std"]

[features]
default = ["std", "parallel"]
# OS clock (wall-time budgets) and platform float intrinsics.
std = []
# Multi-core segment rounds, replicas, and multi-start via rayon (implies std).
parallel = ["std", "dep:rayon"]
# Pure-Rust float math for no_std builds (required when `std` is disabled).
libm = ["dep:libm"]

[dependencies]
log   = { version = "0.4.29", default-features = false }
rayon = { version = "1.11.0", optional = true }
libm  = { version = "0.2.11", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"
