[package]
name        = "tsp_mt_core"
version     = "0.1.0"
edition     = "2024"
description = "Core solver library for tsp-mt"
license     = "Apache-2.0"
readme      = "../../README.md"
keywords    = ["tsp", "routing", "geo", "lkh", "h3"]
categories  = ["algorithms"]

[dependencies]
rand          = "0.9.2"
rayon         = "1.11.0"
ryu           = "1.0.22"
kiddo         = "5.2.4"
map_3d        = "0.1.5"
h3o           = "0.9.4"
log           = "0.4.29"
env_logger    = "0.11.8"
thiserror     = "2.0.18"
ctrlc         = "3.4.7"
tsp_mt_derive = { path = "../tsp_mt_derive" }
lkh           = { path = "../lkh" }

[features]
default   = []
fetch-lkh = ["lkh/fetch-lkh"]
