[package]
name = "tsp_mt_derive"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Internal proc-macros for the tsp-mt CLI (option parsing, display, timing); not a general-purpose API"
license = "Apache-2.0"
repository = "https://github.com/TurtIeSocks/tsp-mt"
keywords = ["proc-macro", "cli", "derive", "tsp-mt"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
